@@ -1912,7 +1912,9 @@ static void h2_session_ev_mpm_stopping(h2_session *session, int arg, const char 
             break;
         default:
             h2_session_shutdown_notice(session);
+#if !AP_MODULE_MAGIC_AT_LEAST(20120211, 110)
             h2_workers_graceful_shutdown(session->workers);
+#endif
             break;
     }
 }
